[tool.poetry]
name = "TagsMusicConverter"
version = "0.1.0"
description = "Convert your wma files to mp3 with ID3 tags."
authors = ["CHANG Xuben <changxuben@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydub = "^0.25.1"
send2trash = "^1.8.2"
mutagen = "^1.47.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
